--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,11 @@
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
 	"require": {
-		"laravel/framework": "4.1.*"
+		"laravel/framework": "4.1.*",
+        "guzzlehttp/guzzle": "4.*",
+        "aws/aws-sdk-php": "2.*",
+        "mikealmond/musicbrainz": "0.2.*@dev",
+        "ricbra/php-discogs-api": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
