Adding iTunes and Amazon dependencies. Added Discogs lookup to releases.

--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,10 @@
         "guzzlehttp/guzzle": "4.*",
         "aws/aws-sdk-php": "2.*",
         "mikealmond/musicbrainz": "0.2.*@dev",
-        "ricbra/php-discogs-api": "dev-master"
-	},
+        "ricbra/php-discogs-api": "dev-master",
+        "exeu/apai-io": "dev-master",
+        "pond/tunes-bundle": "*"
+    },
 	"autoload": {
 		"classmap": [
 			"app/commands",
