--- a/public/.htaccess
+++ b/public/.htaccess
@@ -17,6 +17,9 @@ Satisfy any
     </IfModule>
 
     RewriteEngine On
+    # Force use of https
+    RewriteCond %{HTTPS} !=on
+    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
     # Redirect Trailing Slashes...
     RewriteRule ^(.*)/$ /$1 [L,R=301]
